# templates

./: LICENSE  cookiecutter.json  create-project  flavors.csv
git/: LICENSE  template.toml
hooks/: pre_gen_project.sh
python/langgraph/: cookiecutter.json
python/langgraph/hooks/: post_gen_project.py
python/langgraph/{{cookiecutter.__common.project_name}}/: .env.template  .gitignore  README.md  langgraph.json  pyproject.toml
python/langgraph/{{cookiecutter.__common.project_name}}/{{cookiecutter.__graph_dir}}/: agent.py  config.py  nodes.py  states.py
python/langgraph/{{cookiecutter.__common.project_name}}/{{cookiecutter.graph_name}}/: agent.py  nodes.py  states.py  tools.py
rust/backend-axum/: cookiecutter.json
rust/{{cookiecutter.__common.project_name}}/: test.txt
utils/cliff/: cliff.toml  template.toml
{{cookiecutter.__project_name}}-base-tmp/: LICENSE  cliff.toml
